cmake_minimum_required(VERSION 3.13)
project(New_peoject3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(New_peoject3
        Barbarian.cpp
        Barbarian.h
        BlueMen.cpp
        BlueMen.h
        Chara.cpp
        Chara.h
        Game.cpp
        Game.h
        HarryP.cpp
        HarryP.h
        inputVal.cpp
        inputVal.h
        main.cpp
        Medusa.cpp
        Medusa.h
        Vampire.cpp
        Vampire.h Character.cpp Character.h)
